Ensure workflows only run on push, not release.

--- a/.github/workflows/run-ebuild-tests.yml
+++ b/.github/workflows/run-ebuild-tests.yml
@@ -2,6 +2,10 @@ name: Ebuild Tests
 
 on:
   push:
+    branches:
+      - '**'
+    tags-ignore:
+      - '*.*'
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
